// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTypes > alias handling > matches snapshot for aliased operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
}

// Operation Types
export type GetMultipleUsersQueryVariables = {
  firstId: string
  secondId: string
}

export type GetMultipleUsersQuery = {
  firstUser: UserFieldsFragment | null
  secondUser: UserFieldsFragment | null
}

export type GetUsersWithAliasesQueryVariables = {
  limit?: number
}

export type GetUsersWithAliasesQuery = {
  allUsers: Array<{
    userId: string
    userName: string
    userEmail: string
  }>
}

export type GetUserWithTypenameQueryVariables = {
  id: string
}

export type GetUserWithTypenameQuery = {
  user: {
    id: string
    name: string
    type: "User"
  } | null
}

export type GetMixedFieldsQueryVariables = {
  id: string
}

export type GetMixedFieldsQuery = {
  user: {
    id: string
    displayName: string
    email: string
    avatar: string | null
  } | null
}
"
`;

exports[`generateTypes > interface types > matches snapshot for interface operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Fragment Types
export type NodeFieldsFragment = {
    __typename: "User"
  id: string
  name: string
  } | {
    __typename: "Post"
  id: string
  title: string
  }

// Operation Types
export type GetNodeQueryVariables = {
  id: string
}

export type GetNodeQuery = {
  node: {
      __typename: "User"
    id: string
    name: string
    email: string
    } | {
      __typename: "Post"
    id: string
    title: string
    content: string
    } | null
}

export type GetNodeMinimalQueryVariables = {
  id: string
}

export type GetNodeMinimalQuery = {
  node: {
      __typename: string
    id: string
    } | null
}

export type GetNodeWithFragmentQueryVariables = {
  id: string
}

export type GetNodeWithFragmentQuery = {
  node: { __typename: "User" } | { __typename: "Post" } | null
}
"
`;

exports[`generateTypes > matches snapshot for post operations with nested fragments 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Schema Types
export type CreatePostInput = {
  title: string
  content: string
  authorId: string
  tags?: Array<string> | null
}

export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: string
}

export type PostFieldsFragment = {
  id: string
  title: string
  content: string
  published: boolean
  createdAt: string
  tags: Array<string>
}

export type PostWithAuthorFragment = PostFieldsFragment & {
  author: UserFieldsFragment
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}

export type GetPostsQueryVariables = {
  authorId?: string
}

export type GetPostsQuery = {
  posts: Array<PostWithAuthorFragment>
}

export type CreatePostMutationVariables = {
  input: CreatePostInput
}

export type CreatePostMutation = {
  createPost: PostFieldsFragment
}
"
`;

exports[`generateTypes > matches snapshot for user operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Schema Types
export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: string
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}
"
`;

exports[`generateTypes > matches snapshot with custom scalars 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Schema Types
export type CreateUserInput = {
  name: string
  email: string
  avatarUrl?: string
}

export type UpdateUserInput = {
  name?: string
  email?: string
  avatarUrl?: string
}


// Fragment Types
export type UserFieldsFragment = {
  id: string
  name: string
  email: string
  avatarUrl: string | null
  createdAt: Date
}

// Operation Types
export type GetUserQueryVariables = {
  id: string
}

export type GetUserQuery = {
  user: UserFieldsFragment | null
}

export type ListUsersQueryVariables = {
  limit?: number
  offset?: number
}

export type ListUsersQuery = {
  users: Array<UserFieldsFragment>
}

export type CreateUserMutationVariables = {
  input: CreateUserInput
}

export type CreateUserMutation = {
  createUser: UserFieldsFragment
}

export type UpdateUserMutationVariables = {
  id: string
  input: UpdateUserInput
}

export type UpdateUserMutation = {
  updateUser: UserFieldsFragment | null
}

export type DeleteUserMutationVariables = {
  id: string
}

export type DeleteUserMutation = {
  deleteUser: boolean
}
"
`;

exports[`generateTypes > union types > matches snapshot for union operations 1`] = `
"/* eslint-disable */
/* This file is auto-generated by tangrams. Do not edit. */

// Operation Types
export type SearchContentQueryVariables = {
  query: string
}

export type SearchContentQuery = {
  search: Array<{
      __typename: "User"
      id: string
      name: string
      email: string
    } | {
      __typename: "Post"
      id: string
      title: string
      content: string
    }>
}

export type SearchMinimalQueryVariables = {
  query: string
}

export type SearchMinimalQuery = {
  search: Array<{ __typename: "User" } | { __typename: "Post" }>
}
"
`;
